--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Lemonada|Open+Sans&display=swap"
+      href="https://fonts.googleapis.com/css?family=Lemonada|Roboto&display=swap"
       rel="stylesheet"
     />
     <!--
